--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         }
     ],
     "require": {
-        "phpmailer/phpmailer": "^6.10"
+        "phpmailer/phpmailer": "^6.10",
+        "paypal/paypal-checkout-sdk": "^1.0",
+        "guzzlehttp/guzzle": "^7.9"
     }
 }
