add profile in header

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,9 @@
 RewriteEngine On
 RewriteBase /
 
+# Allow direct access to assets directory
+RewriteRule ^assets/ - [L]
+
 # Redirect all to index.php if not a real file or directory
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
